--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "express": "^4.19.1",
     "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "serverless-http": "^3.2.0"
   }
 }
